add auto create button

--- a/avalondocktest/MainWindow.xaml
+++ b/avalondocktest/MainWindow.xaml
@@ -13,7 +13,11 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Button Click="Button_Click">add new dock</Button>
+        <StackPanel>
+            <Button Click="Button_Click">add new dock</Button>
+            <Button Click="Button2_Click">create and close 10000 docks</Button>
+
+        </StackPanel>
         <avalonDock:DockingManager Grid.Row="1" Name="dockManager"
                                     AnchorablesSource="{Binding DockItems}">
             <avalonDock:DockingManager.LayoutItemContainerStyle>
